# bevy_ui_extras

./: Cargo.toml  README.md
examples/: comp_visualization_test.rs  simple.rs
src/: components.rs  lib.rs  plugins.rs  resources.rs  states.rs  stylesheets.rs  systems.rs  tree.rs
src/tables/: mod.rs  resources.rs
src/widgets/: mod.rs
src/widgets/app_status/: mod.rs  plugins.rs  resources.rs
src/widgets/components_view/: mod.rs  plugins.rs  resources.rs  systems.rs
src/widgets/debug_menu/: mod.rs  plugins.rs  resources.rs  systems.rs
src/widgets/logging/: mod.rs  plugins.rs
