[package]
name = "bevy_ui_extras"
version = "0.12.0"
edition = "2021"
repository = "https://github.com/rydb/bevy_ui_extras"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A crate containing a collection of utilities to make working with ui in bevy easier."

[dependencies]
bevy_ecs = { version = "0.14" }
bevy_utils = { version = "0.14" }
bevy_window = "0.14"
bevy_derive = "0.14"
bevy_reflect = "0.14"
bevy_log = "0.14"
bevy_input = "0.14"
bevy_app = "0.14"
bevy_state = "0.14"
bevy_diagnostic = {version = "0.14", features = ["sysinfo_plugin"]}
bevy_hierarchy = "0.14"
# bevy_diagnostics = "0.14"
pretty-type-name = "1.0"
# egui_tiles = "0.9"
#rand = "0.8.5"
#derive_more = "1.0"
colorgrad = "0.7"


glam = "0.27"
bevy-inspector-egui = "0.26"
egui = "0.28"
bevy_egui = "0.29"
egui_extras = "0.28"
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
bevy = {version = "0.14"}


[dependencies.winit]
version = "=0.30.4"
features = ["default"]