[package]
name = "bevy_ui_extras"
version = "0.20.0"
edition = "2024"
repository = "https://github.com/rydb/bevy_ui_extras"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A crate containing a collection of utilities to make working with ui in bevy easier."

[dependencies]
bevy_ecs = { version = "0.16"}
bevy_utils = { version = "0.16" }
bevy_window = "0.16"
bevy_derive = "0.16"
bevy_reflect = "0.16"
bevy_log = "0.16"
bevy_input = "0.16"
bevy_app = "0.16"
bevy_state = "0.16"
bevy_asset = "0.16"
bevy_diagnostic = {version = "0.16", features = ["sysinfo_plugin"]}
bevy_hierarchy = "0.15"
pretty-type-name = "1.0"
colorgrad = "0.7"
bevy-inspector-egui = "0.31"
strum = "0.27"
strum_macros = "0.27"

[dev-dependencies]
bevy = {version = "0.16"}


[dependencies.winit]
version = "=0.30"
features = ["default"]